--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@ html
     <nav>
         <a href="contacto.html">Contacto</a>
         </nav>
+        <nav>
+            <a href="contacto.html">Contacto</a>
+            <a href="galeria.html">Galería</a>
+            </nav>
+            
 </body>
 </html>
 
