Añadir enlace a página de contacto

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@ html
 <title>Mi Página Web</title>
 </head>
 <body>
+
 <h1>Bienvenido a mi página web</h1>
 <p>Esta es una página de ejemplo para el taller de Git.</p>
-
+<section>
+<h2>Sobre este proyecto</h2>
+<p>Este proyecto fue creado como parte del taller de Git.</p>
+</section>
     <nav>
         <a href="contacto.html">Contacto</a>
         </nav>
